# SRAM-Token-Service

./: .gitignore  Makefile  README.md  README.tmp  delegated_access.md  hu.md  wallet.md  wrapping.md
.github/workflows/: build.yml  codeql-analysis.yml  flawfinder.yml  publish.yml
assets/: Proof of Concept.pptx  SRAM_Authentication.iuml  azure.iuml  impersonation.iuml  introspection.iuml  overview.iuml  sync_irods.iuml  sync_vault.iuml  wallet.iuml  wrapping.iuml
assets/delegated_access/option_1/: option_1a.iuml  option_1b.iuml
assets/delegated_access/option_2/: option_2a.iuml  option_2b.iuml  option_2c.iuml
pam_sram_validate/: Makefile.am  README.md  api.c  cache.cpp  cache.h  config.c  config.h  configure.ac  core.3759  core.3776  digest.cpp  digest.h  logging.c  logging.h  pam_sram_validate.c  pam_sram_validate.h  validate.c  validate.h
pam_sram_validate/docker/: Dockerfile  README.md  docker-compose.yml
src/: Makefile.am  README.md  api.c  api.h  cache.cpp  cache.h  config.c  config.h  configure.ac  defs.h  digest.cpp  digest.h  logging.c  logging.h  pam_sram_validate.c  pam_sram_validate.h  validate.c  validate.h
src/docker/: Dockerfile  README.md  docker-compose.yml
